--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,9 @@ jobs:
       run: npm install
       working-directory: ./client
 
-    - name: 'Build the React app'
-      run: npm run build
-      working-directory: ./client
+    - name: 'Zip build folder'
+      run: zip -r build.zip ./*
+      working-directory: ./client/build
 
     - name: 'Zip build folder'
       run: zip -r build.zip build
