--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,35 +10,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: 'Checkout GitHub Action'
-      uses: actions/checkout@v4
+      - name: 'Checkout GitHub Action'
+        uses: actions/checkout@v4
 
-    - name: 'Set up Node.js'
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18.x'
+      - name: 'Set up Node.js'
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
 
-    - name: 'Install Server Dependencies'
-      run: npm install
-      working-directory: ./server
+      - name: 'Install Server Dependencies'
+        run: npm install
+        working-directory: ./server
 
-    - name: 'Install Client Dependencies'
-      run: npm install
-      working-directory: ./client
+      - name: 'Install Client Dependencies'
+        run: npm install
+        working-directory: ./client
 
-    - name: 'Zip build folder'
-      run: zip -r build.zip ./*
-      working-directory: ./client/build
+      - name: 'Build the React app'
+        run: npm run build
+        working-directory: ./client
 
-    - name: 'Zip build folder'
-      run: zip -r build.zip build
-      working-directory: ./client/build
+      - name: 'Zip build folder'
+        run: zip -r build.zip ./*
+        working-directory: ./client/build
 
-    - name: 'Deploy to Azure Web App'
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'fullstackapplication'
-        publish-profile: ${{ secrets.azurePublishSettings }}
-        package: './client/build.zip'
+      - name: 'Deploy to Azure Web App'
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: 'fullstackapplication'
+          publish-profile: ${{ secrets.azurePublishSettings }}
+          package: ./client/build/build.zip
+
 
 
